# build123-timber

./: .gitignore  DOCS_SETUP.md  LICENSE  README.md  pyproject.toml
.codacy/: codacy.yaml
.githooks/: pre-push  setup-hooks.sh
.github/: PAGES_SETUP.md
.github/workflows/: docs.yml
docs/: .gitignore  README.md  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst  structural_integration_plan.md
docs/api/: alignment.rst  analysis.rst  barn.rst  export.rst  frame.rst  index.rst  joints.rst  utils.rst
examples/: alignment_joints_demo.py  auto_alignment.py  barn_frame.py  barn_with_rafters.py  basic_frame.py  bent_with_pegs.py  contact_surface_extraction.py  fea_barn_frame.py  fea_barn_with_braces.py  fea_bent_with_rafters.py  fea_pipeline.py  fea_rafter_only.py  fea_single_bent.py  fea_single_bent_with_braces.py  fea_utils.py  joinery_showcase.py  joint_cuts_gallery.py  pegs_demo.py  rafters_demo.py
src/build123_timber/: __init__.py  alignment.py  elements.py  layout.py  model.py
src/build123_timber/joints/: __init__.py  base.py  butt.py  dovetail.py  lap.py  miter.py  mortise_tenon.py  specialty.py  utils.py
src/timber_joints/: __init__.py  alignment.py  analysis.py  barn.py  brace_tenon.py  config.py  dovetail.py  export.py  frame.py  half_dovetail.py  lap_joint.py  lap_x_section.py  shouldered_tenon.py  tenon.py  utils.py
src/timber_joints/fea/: __init__.py  assembly.py  calculix.py  frame.py  materials.py  meshing.py  solver.py  visualization.py
src/timber_joints/fea/backends/: __init__.py  calculix.py  code_aster.py
tests/: conftest.py  test_alignment.py  test_alignment_visual.py  test_barn_api.py  test_elements.py  test_elements_visual.py  test_examples.py  test_joints.py  test_joints_visual.py  test_layout.py  test_model.py  test_utils.py  test_utils_visual.py  test_visual_braces.py
v2/: README.md  pyproject.toml  test_visual.py  test_visual_alignment_joints.py  test_visual_brace_tenons.py  test_visual_braces.py  test_visual_contact_surfaces.py  test_visual_fea_barn_braced.py  test_visual_fea_barn_frame.py  test_visual_fea_bent.py  test_visual_fea_pipeline.py  test_visual_joint_cuts.py
v2/contact_test_output/: beam.step  left_post.step
v2/examples/: compas_pipeline_example.py
v2/fea_barn_frame_output/: back_girt.step  bent1_beam.step  bent1_left_post.step  bent1_right_post.step  bent2_beam.step  bent2_left_post.step  bent2_right_post.step  bent3_beam.step  bent3_left_post.step  bent3_right_post.step  front_girt.step  left_girt.step  right_girt.step
v2/fea_bent_output/: beam.step  left_post.step  right_post.step
v2/fea_pipeline_test_output/: beam.step  left_post.step  right_post.step
v2/src/timber_joints/: __init__.py  alignment.py  analysis.py  barn.py  base_joint.py  beam.py  brace_tenon.py  dovetail.py  half_dovetail.py  lap_joint.py  lap_x_section.py  shouldered_tenon.py  tenon.py  utils.py
v2/src/timber_joints/fea/: __init__.py  assembly.py  calculix.py  frame.py  meshing.py  pipeline.py
v2/tests/: test_brace_alignment.py
