[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "build123-timber"
version = "0.1.0"
description = "A timber framing library for build123d - parametric design of timber structures with joinery"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = [
    "CAD",
    "build123d",
    "timber",
    "woodworking",
    "joinery",
    "mortise",
    "tenon",
    "dovetail",
    "timber frame",
    "parametric design"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "build123d>=0.5.0",
    "ocp-vscode>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "ipykernel>=6.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/build123-timber"
Documentation = "https://github.com/yourusername/build123-timber#readme"
Repository = "https://github.com/yourusername/build123-timber"
Issues = "https://github.com/yourusername/build123-timber/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/build123_timber"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4"]
ignore = ["D100", "D104"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
