[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "build123-timber"
version = "0.1.0"
description = "A timber framing library for build123d - parametric design of timber structures with joinery"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "CAD",
    "build123d",
    "timber",
    "woodworking",
    "joinery",
    "tenon",
    "dovetail",
    "lap joint",
]

dependencies = [
    "build123d>=0.5.0",
    "ocp-vscode>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
]



[tool.hatch.build.targets.wheel]
packages = ["src/timber_joints"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
