[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timber-joints"
version = "0.1.0"
description = "Simplified timber joinery library for build123d - inserting joint parts only"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "CAD",
    "build123d",
    "timber",
    "woodworking",
    "joinery",
    "tenon",
    "dovetail",
    "lap joint",
]
dependencies = [
    "build123d>=0.5.0",
    "ocp-vscode>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/timber_joints"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
